--- a/faq.html
+++ b/faq.html
@@ -48,6 +48,9 @@
     <body>
         
      <div class="faq-container">
+
+     <h1>FAQ</h1>
+     <BR><BR>
         <dl>
             <dt>Do I need to have specific software and hardware to use <em>Alien Rescue</em>?</dt>
                 <dd>
