--- a/screencasts.html
+++ b/screencasts.html
@@ -419,14 +419,16 @@ $(document).ready(function(){
 
     <!-- Button HTML (to Trigger Modal) -->
     <a id="intro" href="#myModal1" class="btn col-md-3" data-toggle="modal">Communication Center</a>
-   
+    <iframe src="//player.vimeo.com/video/205981649" width="100%" height="405" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
     <!-- Modal HTML -->
     <div id="myModal1" class="modal fade">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
+
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                     <h4 class="modal-title">Communication Center</h4>
+
                 </div>
                 <div class="modal-body">
                     <iframe id="cartoonVideo1"  src="https://player.vimeo.com/video/205981649" width = "560" height = "315" frameborder="0" frameborder = "0" webkitallowfullscreen = "" mozallowfullscreen = "" allowFullScreen = ""></iframe>
